# ResonaEQ

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: dsp.rs  lib.rs  loopback.rs  main.rs
src/components/: ParametricEqGraph.tsx  SetupWizard.tsx
src/lib/: audio.ts
src/types/: audio.ts
src/utils/: autoEqParser.ts  headphoneDetector.ts
