[package]
name = "Resona"
version = "1.0.0"
description = "A standalone Spotify-style system audio control app."
authors = ["Miguel Arroyo"]
edition = "2021"

[lib]
name = "resona_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hound = "3.5"
cpal = "0.15"
wasapi = "0.23"
ringbuf = "0.4"
rustfft = "6"
tauri-plugin-fs = "2"
chrono = { version = "0.4", features = ["serde"] }
